--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -3,4 +3,9 @@
     border-radius: 5px;
     color: #fff;
     padding: 7px 20px;
+    border: none;
+}
+.button-group{
+    display: flex;
+   gap: 10px;
 }
