--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,45 @@
 :root{
   --deskcolor:#020A18;
+  --konteyner-backcolor:#08101E;
 }
 *{
   box-sizing: border-box;
+  /* outline: 1px solid white !important; */
+  margin: 0 ;
 }
 body{
   background:var(--deskcolor);
-  overflow-x: hidden !important;
+}
+
+.konteyner{
+  background-color:var(--konteyner-backcolor);
+}
+@media (min-width:1347px) {
+  .konteyner {
+      padding: 30px 200px;
+
+  }
+
+}
+
+@media (max-width:1346px) {
+  .konteyner {
+      padding: 30px 150px;
+
+  }
+}
+
+@media (max-width:1180px) {
+  .konteyner {
+      padding: 30px 50px;
+
+  }
+}
+
+@media (max-width:576px) {
+  .konteyner {
+      padding: 30px 0;
+
+  }
+  
 }
