--- a/src/assets/css/Introduction.css
+++ b/src/assets/css/Introduction.css
@@ -2,13 +2,18 @@
 
 .introduction {
     color: white;
+    margin: 0 !important;
     
 }
 .introduction_left_side{
     padding-top: 160px;
+    
 }
 .introduction_right_side{
-   padding-top: 64px;
+   padding: 64px ;
+   margin: 0 !important;
+   
+   
 }
 .introduction_right_side img{
   
@@ -42,10 +47,12 @@
     line-height: 160%;
     opacity: 0.7;
     padding: 40px 0;
+    height: 160px;
     
 }
+            /* mediaquery ///////////////////////////////////////////////////////////////////////// */
 
-@media (min-width:1347px) {
+/* @media (min-width:1347px) {
     .introduction {
         padding: 30px 200px;
 
@@ -69,7 +76,28 @@
 
 @media (max-width:576px) {
     .introduction {
-        padding: 30px 10px;
+        padding: 30px 0;
 
     }
+    .introduction_left_side{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .introduction h1,.introduction .small{
+        text-align: center;
+    }
+    
+} */
+@media (max-width:576px) {
+    
+    .introduction_left_side{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .introduction h1,.introduction .small{
+        text-align: center;
+    }
+    
 }
