aos duration elavesi

--- a/src/assets/css/Colleagues_section.css
+++ b/src/assets/css/Colleagues_section.css
@@ -3,7 +3,13 @@
   
 }
 
-
+.collegaqutusu{
+   max-width: 200px;
+}
+.collegaqutusu img{
+   width:100%;
+   
+}
  @media(max-width:590px){
   
    .colleagues_section{
