--- a/src/assets/css/Award.css
+++ b/src/assets/css/Award.css
@@ -14,6 +14,12 @@
     color: white;
     background-color: #101725;
     margin: 20px 0;
+    cursor: pointer;
+    transition:transform 1s ;
+}
+.card:hover{
+    box-shadow: 0 0 8px gray;
+    transform:translateY(-10px);
 }
 .card-body{
     padding: 0px;
