--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -5,10 +5,19 @@
     padding: 7px 20px;
     border: none;
 }
-.button-group{
+
+.button-group {
     display: flex;
-   gap: 10px;
+    gap: 10px;
 }
-.playicon{
+
+.playicon {
     margin-right: 4px;
+}
+
+.form-btn {
+    background-color: rgba(26, 24, 136, 0.801);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 7px;
 }
